--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-jss": "^8.4.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "react-youtube": "^7.6.0",
     "redux": "^3.7.2",
     "redux-form": "^7.3.0",
     "redux-thunk": "^2.2.0",
